// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir": should export the secrets in fr-config-manager style": secretTestDir/esvs/secrets/esv-test.json 1`] = `
{
  "_id": "esv-test",
  "description": "test",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "valueBase64": "\${ESV_TEST_1}",
      "version": "1",
    },
    {
      "valueBase64": "\${ESV_TEST_2}",
      "version": "2",
    },
    {
      "valueBase64": "\${ESV_TEST_3}",
      "version": "3",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -a -D secretTestDir": should export the secrets in fr-config-manager style without version history" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -a -D secretTestDir": should export the secrets in fr-config-manager style without version history" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -a -D secretTestDir": should export the secrets in fr-config-manager style without version history": secretTestDir/esvs/secrets/esv-test.json 1`] = `
{
  "_id": "esv-test",
  "description": "test",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_TEST}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -n esv-test -D secretTestDir": should export the secret with name esv-test in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -n esv-test -D secretTestDir": should export the secret with name esv-test in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -n esv-test -D secretTestDir": should export the secret with name esv-test in fr-config-manager style": secretTestDir/esvs/secrets/esv-test.json 1`] = `
{
  "_id": "esv-test",
  "description": "test",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "valueBase64": "\${ESV_TEST_1}",
      "version": "1",
    },
    {
      "valueBase64": "\${ESV_TEST_2}",
      "version": "2",
    },
    {
      "valueBase64": "\${ESV_TEST_3}",
      "version": "3",
    },
  ],
}
`;
